--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "semi": true,
   "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 120,
-  "tabWidth": 2,
+  "printWidth": 80,
+  "tabWidth": 2
 }
